ansible/roles/kafka-ui/files/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  labels:    
    app.kubernetes.io/instance: kafka-ui
    app.kubernetes.io/name: kafka-ui
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: kafka-ui
      app.kubernetes.io/name: kafka-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: kafka-ui
        app.kubernetes.io/name: kafka-ui
    spec:
      containers:
      - env:
        - name: SPRING_CONFIG_ADDITIONAL-LOCATION
          value: /kafka-ui/config.yml
        image: docker.io/provectuslabs/kafka-ui:v0.7.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: kafka-ui
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        resources: {}
        securityContext: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /kafka-ui/
          name: kafka-ui-yaml-conf-configmap
        - mountPath: /tmp/certificates
          name: kafka-client-store
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: kafka-ui
      serviceAccountName: kafka-ui
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: kafka-ui-config
        name: kafka-ui-yaml-conf-configmap
      - secret:
          defaultMode: 420
          secretName: kafka-client-store
        name: kafka-client-store
